package org.example.enums;

public enum ResultState {
    DRAW,
    WIN,
    IN_PROGRESS
}
