@startuml

' =====================
' Classes
' =====================
class Board
{
-cells : Cell[][]

+placeSymbol()
+isBoardFull()
+reset()
}

class Player{
-name : String
-symbol : Symbol

+makeMove()
}

class Game
{
-board : Board
-players : Player[2]
-currentPlayer : Player
-result : Result

+start()
+playTurn()
+switchPlayer()
+isGameOver()
+restart()
}

class Result
{
-winner : Player
-state : ResultState
}

class Cell
{
-row : int
-column : int
- symbol : Symbol
}
' ======================
' Interfaces
' ======================



' ======================
' Enums
' ======================
enum Symbol
{
X
O
EMPTY
}

enum ResultState
{
WIN
DRAW
IN_PROGRESS
}



' ======================
' Relationships
' ======================
Game --> Board
Game --> Player
Game --> Result

Cell --> Symbol

Result --> ResultState
Result --> Player

Board --> Cell

Player --> Symbol
@enduml